# image-plane-correction

./: Dockerfile_polish  Dockerfile_polishcv2  README.md  pyproject.toml
.agents/: plan-calcflow-alpha-gamma-ionosphere.md
docs/: opencv.md
notebooks/: dsa2000_clean_test.ipynb  optical_flow.ipynb  optical_flow2.ipynb  optical_flow3.ipynb  simulate_dsa2000_image_mosaic.ipynb
scripts/: fits_warp_lwa.py  optimize_alpha_gamma.py  visualize_tuning_results.py
src/: brox.py  catalogs.py  data.py  extractor_pb_75.py  flow.py  pb_correct.py  postprocessing.py  preprocessing.py  util.py
src/image_plane_correction/: __init__.py  catalogs.py  data.py  extractor_pb_75.py  flow.py  flow_metrics.py  interactive.py  pb_correct.py  postprocessing.py  preprocessing.py  pybdsf_worker.py  qa.py  quality_checks.py  source_detection.py  util.py  xds_from_fits.py
tests/: __init__.py  test_calcflow_resample.py  test_calcflow_smoke_synthetic.py  test_catalog_qc.py  test_flow_phase2.py  test_flow_structure_metrics.py  test_optimize_alpha_gamma.py  test_runqa_nan.py  test_source_detection_sky_matching.py  test_theoretical_sky_nan_inputs.py
