[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-plane-correction"
description = "Image-plane correction algorithms for the OVRO-LWA radio telescope"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1"

authors = [
  {name = "Casey Law", email = "claw@astro.caltech.edu"},
  {name = "Zachary Huang", email = "zwhuang@caltech.edu"},
]

maintainers = [
  {name = "Zachary Huang", email = "zwhuang@caltech.edu"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy>=2",
  "pandas",
  "astropy",
  "bdsf",
  "scipy",
  "matplotlib",
  "multiprocess",
  "jax>=0.4.30,<0.7",
  "jaxtyping",
  "equinox>=0.11,<0.13",
  "interpax>=0.3.8,<0.4",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipympl",
  "ruff",
  "pyright",
  "isort",
]

gpu = [
  "jax[cuda12]"
]

[project.urls]
Homepage = "https://github.com/ovro-lwa/image-plane-correction"
Repository = "https://github.com/ovro-lwa/image-plane-correction"
Issues = "https://github.com/ovro-lwa/image-plane-correction/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "scripts"]

[tool.isort]
src_paths = ["src", "scripts"]

[tool.ruff]
include = ["src/**/*.py", "scripts/*.py"]
extend-include = ["notebooks/*.ipynb"]
